fixed code formatting for readability

--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ main {
   width: 75px;
   height: 75px;
   border-radius: 50%;
-  background-color: #222;
   margin: .5em;
 }
 
